--- a/style.css
+++ b/style.css
@@ -9,25 +9,30 @@ li{
     list-style: none;
 }
 
-header{
+.contenedor-uno{
     background-color: #191e2b;
-}
-
-.titulo-proyecto{
-    width: 100vw;
-    padding: 2% 0%;
-    justify-content: center;
-    margin: 0;
-    color: #ffffff;
 }
 
 .ubicacion-row{
     display: flex;
 }
 
+.ubicacion-column{
+    display: flex;
+    flex-direction: column;
+}
+
+.titulo-proyecto{
+    width: 80vw;
+    padding: 2% 0%;
+    justify-content: center;
+    margin: 0;
+    color: #ffffff;
+}
+
 .lista-nav{
     justify-content: center;
-    width: 100vw;
+    width: 80vw;
     padding: 0;
     margin: 0;
 }
@@ -52,4 +57,37 @@ header{
     align-content: center;
     font-size: 18px;
 }
+
+.barra-edicion{
+    background-color: #252935;
+    color: #ffffff;
+    width: 20vw;
+}
+
+.barra-edicion h3{
+    font-size: 16px;
+    width: 100%;
+    text-align: center;
+    padding: 2%;
+}
+
+.contenedor-memes{
+    width: 600px;
+    background-color: #ffffff;
+    margin-top: 0;
+    margin-left: 25%;
+    align-items: center;
+}
+
+.contenedor-memes h2{
+    padding: 3%;
+    font-size: 30px;
+}
+
+.contenedor-img{
+    width: 100%;
+    height: 300px;
+    background-color: black;
+}
+
 
