--- a/style.css
+++ b/style.css
@@ -85,14 +85,33 @@ li{
 }
 
 .contenedor-img{
-    width: 100%;
-    height: 300px;
+    width: 600px;
+    height: 400px;
     background-color: black;
 }
+.imagen-edit{
+    width: 100%;
+    height: 100%;
+}
+
 
 .contenedor-filtros label{
     display: flex;
     flex-direction: column;
+    margin: 5%;
 }
+
+.diseño-form{
+    background-color: #393e49;
+    color: #ffffff;
+}
+
+input[type=text]{
+    width: 230px;
+    height: 25px;
+    border-radius: 10px;
+    margin: 5%;
+}
+
 
 
