--- a/style.css
+++ b/style.css
@@ -9,8 +9,10 @@ li{
     list-style: none;
 }
 
-.contenedor-uno{
+
+.seccion-botones{
     background-color: #191e2b;
+    color: #ffffff;
 }
 
 .ubicacion-row{
@@ -27,7 +29,6 @@ li{
     padding: 2% 0%;
     justify-content: center;
     margin: 0;
-    color: #ffffff;
 }
 
 .lista-nav{
@@ -44,11 +45,11 @@ li{
 
 .boton-nav{
     text-decoration: none;
-    color: #ffffff;
     background-color: transparent;
     border: none;
     font-size: 16px;
     justify-content: center;
+    color: #ffffff;
 }
 
 
@@ -116,11 +117,24 @@ li{
     height: 400px;
     background-color: black;
 }
+
+.descargar-meme{
+    background-color: green;
+    color: #ffffff;
+    font-size: 18px;
+    padding: 1%;
+}
+
+.boton-descarga{
+    margin: 5%;
+    display: flex;
+    justify-content: center;
+}
+
 .imagen-edit{
     width: 100%;
     height: 100%;
 }
-
 
 .contenedor-filtros label{
     display: flex;
@@ -140,5 +154,78 @@ input[type=text]{
     margin: 5%;
 }
 
+@media (max-width:414px){
+    #aside-imagen{
+        display: none;
+    }
+    #aside-texto{
+        display: none;
+    }
+    .seccion-botones{
+        width: 100vw;
+    }
+    .titulo-proyecto{
+        width: 100vw;
+        text-align: center;
+    }
+    .lista-nav{
+        padding: 0px;
+        width: 100vw;
+    }
+    .contenedor-memes{
+        width: 100vw;
+        margin: auto;
+        margin-top: 10%;
+    }
+    .contenedor-img{
+        width: 100%;
+    }
+    .boton-nav{
+        font-size: 14px;
+    }
+}
 
+@media(min-width:416px) and (max-width:540px){
+    #aside-imagen{
+        display: none;
+    }
+    #aside-texto{
+        display: none;
+    }
+    .contenedor-memes{
+        width: 100vw;
+        margin: auto;
+        margin-top: 10%;
+    }
+    .contenedor-img{
+        width: 100%;
+    }
+    .titulo-proyecto{
+        width: 100vw;
+        text-align: center;
+    }
+}
+
+@media (min-width:541px) and (max-width:912px){
+    #aside-imagen{
+        display: none;
+    }
+    #aside-texto{
+        display: none;
+    }
+    body{
+        height: 100vh;
+    }
+    .seccion-botones .titulo-proyecto{
+        width: 100vw;
+        text-align: center;
+    }
+    .lista-nav{
+        width: 100vw;
+    }
+    .contenedor-memes{
+        margin: auto;
+        margin-top: 20%;
+    }
+}
 
