--- a/style.css
+++ b/style.css
@@ -111,6 +111,7 @@ li{
 
 .contenedor-memes{
     width: 600px;
+    height: 650px;
     background-color: #ffffff;
     margin-top: 0;
     margin-left: 25%;
@@ -123,7 +124,7 @@ li{
 }
 
 .contenedor-img{
-    width: 600px;
+    width: 100%;
     height: 400px;
     background-color: black;
 }
