--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ li{
 
 .sin-texto{
     width: 100%;
-    height: 90%;
+    height: 100%;
     background-color: black;
 }
 
@@ -19,6 +19,7 @@ li{
 .seccion-botones{
     background-color: #191e2b;
     color: #ffffff;
+    width: 80vw;
 }
 
 .ubicacion-row{
@@ -105,11 +106,15 @@ li{
     display: none;
 }
 
+.main-contenedor{
+    display: flex;
+    justify-content: center;
+}
 .contenedor-memes{
     width: 600px;
     height: 620px;
     margin-top: 0;
-    margin: auto;
+    /* margin: auto; */
     align-items: center;
     background-color: #ffffff;
 }
@@ -121,18 +126,16 @@ li{
     background-color: black;
 }
 
-.campo-texto1{
+.campo-texto{
     width: 100%;
     height: 10%;
     font-size: 30px;
+    font-family: 'Times New Roman', Times, serif;
+    font-weight: 600;
     text-align: center;
-
-}
-.campo-texto2{
-    width: 100%;
-    height: 10%;
-    font-size: 30px;
-    text-align: center;
+    padding: 5% 0%;
+    margin: 0;
+    background-color: #ffffff;
 }
 
 .descargar-meme{
@@ -273,3 +276,5 @@ input[type=text]{
         margin-top: 20%;
     }
 }
+
+
