--- a/style.css
+++ b/style.css
@@ -37,7 +37,8 @@ body{
 /* _______________ */
 
 .transparente{
-    background-color: transparent;
+    background-color: black;
+    color: black;
 }
 
 .disenio-header{
@@ -127,13 +128,17 @@ h3{
 .campo-texto{
     width: 100%;
     height: 10%;
+    text-align: center;
+    background-color: #ffffff;
+}
+
+.texto{
+    color: black;
     font-size: 30px;
     font-family: 'Times New Roman', Times, serif;
     font-weight: 600;
-    text-align: center;
     padding: 5% 0%;
     margin: 0;
-    background-color: #ffffff;
 }
 
 
