--- a/style.css
+++ b/style.css
@@ -36,9 +36,18 @@ body{
 }
 /* _______________ */
 
-.transparente{
-    background-color: black;
-    color: black;
+.transparente-top{
+    position: absolute;
+    top: 10rem;
+    background-color: transparent;
+    padding: 0px;
+}
+
+.transparente-bottom{
+    position: absolute;
+    bottom: 3rem;
+    background-color: transparent;
+    padding: 0px;
 }
 
 .disenio-header{
@@ -115,7 +124,6 @@ h3{
     height: 620px;
     margin-top: 0;
     align-items: center;
-    background-color: #ffffff;
 }
 
 
@@ -128,6 +136,7 @@ h3{
 .campo-texto{
     width: 100%;
     height: 10%;
+    padding: 5% 0%;
     text-align: center;
     background-color: #ffffff;
 }
@@ -137,7 +146,6 @@ h3{
     font-size: 30px;
     font-family: 'Times New Roman', Times, serif;
     font-weight: 600;
-    padding: 5% 0%;
     margin: 0;
 }
 
