--- a/style.css
+++ b/style.css
@@ -31,9 +31,12 @@ body{
 }
 
 .input-claro{
-    background-color: #e7b4e9;
+    background-color: #f7daf8;
     color: #610a64;
+    border: 0.5px ridge #610a64;
 }
+
+
 /* _______________ */
 
 .transparente-top{
@@ -129,8 +132,9 @@ h3{
 
 .contenedor-img{
     width: 100%;
-    height: 80%;
+    /* height: 80%; */
     background-color: black;
+    flex-grow: 1;
 }
 
 .campo-texto{
@@ -184,7 +188,7 @@ h3{
 
 textarea, select{
     width: 98%;
-    height: 30px;
+    height: 35px;
 }
 
 input[type=text]{
@@ -193,22 +197,44 @@ input[type=text]{
     margin-left: 2%;
 }
 
+.input-fuente{
+    background-color: #393e49;
+    color: #ffffff;
+}
 
 .tamaño-fuente{
     width: 100px;
     margin-top: 5%;
     margin-left: auto;
     height: 25px;
-    background-color: #393e49;
-    color: #ffffff;
 }
 .boton-alineado{
     width: 30px;
     margin-top: 5%;
     margin-left: auto;
     height: 30px;
+}
+
+.color-alineado{
     background-color: #393e49;
     color: #ffffff
+}
+
+.espaciado-elementos{
+    justify-content: space-between;
+    margin-right: 5px;
+}
+
+#color-fondo{
+    padding: 0;
+    align-content: center;
+}
+.cuadro-color{
+    width: 100px;
+    background-color: #393e49;
+    border-radius: 5%;
+    border: 0.5px ridge #676e7e;
+    
 }
 
 .input-color{
@@ -216,14 +242,19 @@ input[type=text]{
     width: 40px;
     background-color: transparent;
     border: none;
+    display: flex;
+    justify-content: center;
+    margin: 1.5%;
 }
 
 .input-color::-webkit-color-swatch-wrapper, .input-color::-webkit-color-swatch{
     height: 25px;
     width: 30px;
+    margin-top: 0;
     border-radius: 100%;
     border: none;
 }
+
 
 @media (max-width:414px){
     #aside-imagen{
