--- a/style.css
+++ b/style.css
@@ -193,8 +193,9 @@ textarea, select{
 
 input[type=text]{
     width: 100%;
-    height: 23px;
-    margin-left: 2%;
+    height: 40px;
+    border-radius: 5%;
+    /* margin-left: 2%; */
 }
 
 .input-fuente{
