--- a/style.css
+++ b/style.css
@@ -102,11 +102,21 @@ body{
     border: none;
     font-size: 13px;
     color: #ffffff;
+    border-radius: 5px;
+    justify-content: center;
 }
 
-.boton-nav:hover, .boton-nav:active{
-    background-color: #610a64;
+.boton-nav:hover{
+    background-color: #96079b;
     color: #ffffff;
+}
+
+.boton-nav:active{
+    background-color: #96079b;
+    color: #ffffff;
+    font-size: 10px;
+    width: 100px;
+    transition: 0.5s;
 }
 
 #boton-img:focus, #boton-text:focus{
@@ -119,6 +129,7 @@ body{
     padding: 5%;
     align-content: center;
     font-size: 18px;
+    margin-right: 5px;
 }
 
 .disenio-aside{
@@ -131,6 +142,10 @@ body{
 
 .disenio-aside label {
     font-size: 14px;
+}
+
+.label-filtros{
+    margin-top: 10px;
 }
 
 .disenio-aside p {
@@ -165,7 +180,6 @@ h3{
 
 .contenedor-img{
     width: 100%;
-    /* height: 80%; */
     background-color: black;
     flex-grow: 1;
 }
@@ -208,15 +222,22 @@ h3{
     width: 13vw;
 }
 
-/* .contenedor-filtros label{
-    display: flex;
-    flex-direction: column;
-} */
 
 .boton-reset{
     margin-top: 10%;
     padding: 3%;
     border-radius: 5px;
+}
+
+.boton-reset:hover{
+    background-color: #96079b;
+    color: #ffffff;
+}
+
+.boton-reset:active{
+    background-color: #610a64;
+    color: #ffffff;
+    transition: 0.5s;
 }
 
 .diseño-form{
@@ -233,7 +254,15 @@ input[type=text]{
     width: 100%;
     height: 40px;
     border-radius: 5%;
-    /* margin-left: 2%; */
+}
+
+input[type='range'] {
+    width: 100%;
+    background-color: #393e49;
+    border-radius: 10px;
+    appearance: none;
+    height: 5px;
+    margin-top: 10px;
 }
 
 .input-fuente{
@@ -244,18 +273,30 @@ input[type=text]{
 .tamaño-fuente{
     width: 100px;
     margin-top: 5%;
-    margin-left: auto;
+    margin-left: 2px;
     height: 25px;
     border: 0.5px ridge #676e7e;
 }
+
 .boton-alineado{
     width: 30px;
     margin-top: 5%;
-    margin-left: auto;
+    margin-left: 5px;
     height: 30px;
     border: 0.5px ridge #676e7e;
 }
 
+.boton-alineado:hover{
+    background-color: #96079b;
+    color: #ffffff;
+}
+
+.boton-alineado:active{
+    background-color: #610a64;
+    color: #ffffff;
+    width: 25px;
+    margin-left: 7px;
+}
 .color-alineado{
     background-color: #393e49;
     color: #ffffff
@@ -319,6 +360,31 @@ input[type=text]{
 
 .espaciado-row{
     margin-right: 15px;
+}
+
+select:hover, .boton-contorno:hover{
+    background-color: #96079b;
+    color: #ffffff;
+}
+
+select:focus{
+    background-color: #610a64;
+    color: #ffffff;
+}
+
+input[type='number']:hover, input[type='text']:hover, textarea:hover, .cuadro-color:hover, .input-claro:hover{
+    background-color: #96079b;
+    color: #ffffff;
+}
+
+input[type='number']:focus, input[type='text']:focus, textarea:focus, .cuadro-color:focus, .input-claro:focus{
+    background-color: #610a64;
+    color: #ffffff;
+}
+
+input[type='range']:focus{
+    background-color: #610a64;
+    color: #ffffff;
 }
 
 @media (max-width:414px){
