--- a/style.css
+++ b/style.css
@@ -1,13 +1,9 @@
 
 body{
     margin: 0;
+    /* overflow-x: hidden; */
 }
 
-/* .sin-texto{
-    width: 100%;
-    height: 100%;
-    background-color: black;
-} */
 
 /* modo claro */
 .header-claro{
@@ -20,6 +16,8 @@ body{
     background-color: #f7daf8;
     display: flex;
     align-items: center;
+    height: 100vh;
+    justify-content: center;
 }
 
 .aside-claro{
@@ -27,7 +25,7 @@ body{
     color: #610a64;
     width: 20vw; 
     margin-left: auto;
-    padding: 2%;
+    padding: 0% 2%;
     font-size: 14px;
 }
 
@@ -56,14 +54,14 @@ body{
 
 .transparente-top{
     position: absolute;
-    top: 10rem;
+    top: 10px;
     background-color: transparent;
     padding: 0px;
 }
 
 .transparente-bottom{
     position: absolute;
-    bottom: 1rem;
+    bottom: 10px;
     background-color: transparent;
     padding: 0px;
 }
@@ -137,7 +135,7 @@ body{
     color: #ffffff;
     width: 20vw; 
     margin-left: auto;
-    padding: 2%;
+    padding: 0% 2%;
 }
 
 .disenio-aside label {
@@ -166,15 +164,18 @@ h3{
 
 .disenio-main{
     display: flex;
+    height: 100vh;
+    justify-content: center;
     align-items: center;
     background-color: #30343f;
 }
 .contenedor-memes{
-    width: 600px;
-    height: 620px;
+    width: 500px;
+    height: 520px;
     margin-top: 0;
     align-items: center;
     line-height: 1.5;
+    position: relative;
 }
 
 
@@ -190,6 +191,7 @@ h3{
     padding: 5% 0%;
     text-align: center;
     background-color: #ffffff;
+    position: static;
 }
 
 .texto{
@@ -211,11 +213,14 @@ h3{
     font-size: 16px;
     padding: 1%;
     border-radius: 5%;
+    display: flex;
+    text-align: center;
 }
 
 .boton-descarga i{
-    margin-bottom: 10%;
     margin:auto;
+    display: flex;
+    text-align: center;
 }
 
 .contenedor-filtros{
@@ -246,24 +251,28 @@ h3{
 }
 
 textarea, select{
-    width: 98%;
+    width: 95%;
     height: 35px;
 }
-
+#etiquetas-color{
+    width: 50%;
+}
 input[type=text]{
     width: 100%;
     height: 40px;
     border-radius: 5%;
 }
 
-input[type='range'] {
+/* input[type='range'] {
     width: 100%;
     background-color: #393e49;
     border-radius: 10px;
     appearance: none;
     height: 5px;
     margin-top: 10px;
-}
+} */
+
+
 
 .input-fuente{
     background-color: #393e49;
@@ -271,7 +280,7 @@ input[type='range'] {
 }
 
 .tamaño-fuente{
-    width: 100px;
+    width:40%;
     margin-top: 5%;
     margin-left: 2px;
     height: 25px;
@@ -310,14 +319,20 @@ input[type='range'] {
     padding: 0;
     align-content: center;
 }
+
 .cuadro-color{
-    width: 100px;
+    width: 98%;
     background-color: #393e49;
     border-radius: 5%;
     border: 0.5px ridge #676e7e;
+    text-align: center;
     
 }
 
+.valor-color{
+    display: flex;
+    align-items: center;
+}
 .input-color{
     height: 30px;
     width: 40px;
@@ -382,10 +397,10 @@ input[type='number']:focus, input[type='text']:focus, textarea:focus, .cuadro-co
     color: #ffffff;
 }
 
-input[type='range']:focus{
+/* input[type='range']:focus{
     background-color: #610a64;
     color: #ffffff;
-}
+} */
 
 @media (max-width:414px){
     #aside-imagen{
@@ -470,3 +485,88 @@ input[type='range']:focus{
     }
 }
 
+input[type=range] {
+    -webkit-appearance: none;
+    margin: 10px 0;
+    width: 100%;
+}
+input[type=range]:focus {
+    outline: none;
+}
+input[type=range]::-webkit-slider-runnable-track {
+    width: 100%;
+    height: 4px;
+    cursor: pointer;
+    /* box-shadow: 0px 0px 0px #000000; */
+    background: #393E49;
+    border-radius: 7px;
+    /* border: 0px solid #000000; */
+}
+input[type=range]::-webkit-slider-thumb {
+    box-shadow: 1px 1px 0px #610A64;
+    /* border: 0px solid #010508; */
+    height: 15px;
+    width: 15px;
+    border-radius: 16px;
+    background: #610A64;
+    cursor: pointer;
+    -webkit-appearance: none;
+    margin-top: -7.5px;
+}
+input[type=range]:focus::-webkit-slider-runnable-track {
+    background: #393E49;
+}
+input[type=range]::-moz-range-track {
+    width: 100%;
+    height: 4px;
+    cursor: pointer;
+    /* box-shadow: 0px 0px 0px #000000; */
+    background: #393E49;
+    border-radius: 7px;
+    /* border: 0px solid #000000; */
+}
+input[type=range]::-moz-range-thumb {
+    box-shadow: 1px 1px 0px #610A64;
+    /* border: 0px solid #010508; */
+    height: 19px;
+    width: 19px;
+    border-radius: 16px;
+    background: #610A64;
+    cursor: pointer;
+}
+input[type=range]::-ms-track {
+    width: 100%;
+    height: 4px;
+    cursor: pointer;
+    background: transparent;
+    border-color: transparent;
+    color: transparent;
+}
+input[type=range]::-ms-fill-lower {
+    background: #393E49;
+    /* border: 0px solid #000000; */
+    border-radius: 14px;
+    /* box-shadow: 0px 0px 0px #000000; */
+}
+input[type=range]::-ms-fill-upper {
+    background: #393E49;
+    /* border: 0px solid #000000; */
+    border-radius: 14px;
+    /* box-shadow: 0px 0px 0px #000000; */
+}
+input[type=range]::-ms-thumb {
+    margin-top: 1px;
+    box-shadow: 1px 1px 0px #610A64;
+    /* border: 0px solid #010508; */
+    height: 19px;
+    width: 19px;
+    border-radius: 16px;
+    background: #610A64;
+    cursor: pointer;
+}
+input[type=range]:focus::-ms-fill-lower {
+    background: #393E49;
+}
+input[type=range]:focus::-ms-fill-upper {
+    background: #393E49;
+}
