--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
 
 body{
     margin: 0;
-    /* overflow-x: hidden; */
 }
 
 
@@ -227,7 +226,6 @@ h3{
     width: 13vw;
 }
 
-
 .boton-reset{
     margin-top: 10%;
     padding: 3%;
@@ -257,22 +255,12 @@ textarea, select{
 #etiquetas-color{
     width: 50%;
 }
+
 input[type=text]{
     width: 100%;
     height: 40px;
     border-radius: 5%;
 }
-
-/* input[type='range'] {
-    width: 100%;
-    background-color: #393e49;
-    border-radius: 10px;
-    appearance: none;
-    height: 5px;
-    margin-top: 10px;
-} */
-
-
 
 .input-fuente{
     background-color: #393e49;
@@ -397,11 +385,83 @@ input[type='number']:focus, input[type='text']:focus, textarea:focus, .cuadro-co
     color: #ffffff;
 }
 
-/* input[type='range']:focus{
-    background-color: #610a64;
-    color: #ffffff;
-} */
+input[type=range] {
+    -webkit-appearance: none;
+    margin: 10px 0;
+    width: 100%;
+}
+input[type=range]:focus {
+    outline: none;
+}
+input[type=range]::-webkit-slider-runnable-track {
+    width: 100%;
+    height: 4px;
+    cursor: pointer;
+    background: #393E49;
+    border-radius: 7px;
+}
+input[type=range]::-webkit-slider-thumb {
+    box-shadow: 1px 1px 0px #610A64;
+    height: 15px;
+    width: 15px;
+    border-radius: 16px;
+    background: #610A64;
+    cursor: pointer;
+    -webkit-appearance: none;
+    margin-top: -7.5px;
+}
+input[type=range]:focus::-webkit-slider-runnable-track {
+    background: #393E49;
+}
+input[type=range]::-moz-range-track {
+    width: 100%;
+    height: 4px;
+    cursor: pointer;
+    background: #393E49;
+    border-radius: 7px;
+}
+input[type=range]::-moz-range-thumb {
+    box-shadow: 1px 1px 0px #610A64;
+    height: 19px;
+    width: 19px;
+    border-radius: 16px;
+    background: #610A64;
+    cursor: pointer;
+}
+input[type=range]::-ms-track {
+    width: 100%;
+    height: 4px;
+    cursor: pointer;
+    background: transparent;
+    border-color: transparent;
+    color: transparent;
+}
+input[type=range]::-ms-fill-lower {
+    background: #393E49;
+    border-radius: 14px;
+}
+input[type=range]::-ms-fill-upper {
+    background: #393E49;
+    border-radius: 14px;
+}
+input[type=range]::-ms-thumb {
+    margin-top: 1px;
+    box-shadow: 1px 1px 0px #610A64;
+    height: 19px;
+    width: 19px;
+    border-radius: 16px;
+    background: #610A64;
+    cursor: pointer;
+}
+input[type=range]:focus::-ms-fill-lower {
+    background: #393E49;
+}
+input[type=range]:focus::-ms-fill-upper {
+    background: #393E49;
+}
 
+
+/* Medias queries */
 @media (max-width:414px){
     #aside-imagen{
         display: none;
@@ -422,7 +482,7 @@ input[type='number']:focus, input[type='text']:focus, textarea:focus, .cuadro-co
     }
     .contenedor-memes{
         width: 80vw;
-        height: 70vh;
+        height: 50vh;
         margin: auto;
         margin-top: 10%;
         line-height: 2.5;
@@ -439,6 +499,9 @@ input[type='number']:focus, input[type='text']:focus, textarea:focus, .cuadro-co
     .boton-nav{
         font-size: 14px;
     }
+    .disenio-main{
+        height: 100vh;
+    }
 }
 
 @media(min-width:416px) and (max-width:540px){
@@ -448,17 +511,21 @@ input[type='number']:focus, input[type='text']:focus, textarea:focus, .cuadro-co
     #aside-texto{
         display: none;
     }
-    .contenedor-memes{
-        width: 100vw;
-        margin: auto;
-        margin-top: 10%;
+    body{
+        height: 100vh;
     }
-    .contenedor-img{
-        width: 100%;
-    }
-    .titulo-proyecto{
+    .disenio-header, .header-claro, .titulo-proyecto{
         width: 100vw;
         text-align: center;
+    }
+    .panel-botones{
+        width: 100vw;
+    }
+    .contenedor-memes{
+        height: 50vh;
+        width: 80vw;
+        margin: auto;
+        margin-top: 20%;
     }
 }
 
@@ -485,88 +552,3 @@ input[type='number']:focus, input[type='text']:focus, textarea:focus, .cuadro-co
     }
 }
 
-input[type=range] {
-    -webkit-appearance: none;
-    margin: 10px 0;
-    width: 100%;
-}
-input[type=range]:focus {
-    outline: none;
-}
-input[type=range]::-webkit-slider-runnable-track {
-    width: 100%;
-    height: 4px;
-    cursor: pointer;
-    /* box-shadow: 0px 0px 0px #000000; */
-    background: #393E49;
-    border-radius: 7px;
-    /* border: 0px solid #000000; */
-}
-input[type=range]::-webkit-slider-thumb {
-    box-shadow: 1px 1px 0px #610A64;
-    /* border: 0px solid #010508; */
-    height: 15px;
-    width: 15px;
-    border-radius: 16px;
-    background: #610A64;
-    cursor: pointer;
-    -webkit-appearance: none;
-    margin-top: -7.5px;
-}
-input[type=range]:focus::-webkit-slider-runnable-track {
-    background: #393E49;
-}
-input[type=range]::-moz-range-track {
-    width: 100%;
-    height: 4px;
-    cursor: pointer;
-    /* box-shadow: 0px 0px 0px #000000; */
-    background: #393E49;
-    border-radius: 7px;
-    /* border: 0px solid #000000; */
-}
-input[type=range]::-moz-range-thumb {
-    box-shadow: 1px 1px 0px #610A64;
-    /* border: 0px solid #010508; */
-    height: 19px;
-    width: 19px;
-    border-radius: 16px;
-    background: #610A64;
-    cursor: pointer;
-}
-input[type=range]::-ms-track {
-    width: 100%;
-    height: 4px;
-    cursor: pointer;
-    background: transparent;
-    border-color: transparent;
-    color: transparent;
-}
-input[type=range]::-ms-fill-lower {
-    background: #393E49;
-    /* border: 0px solid #000000; */
-    border-radius: 14px;
-    /* box-shadow: 0px 0px 0px #000000; */
-}
-input[type=range]::-ms-fill-upper {
-    background: #393E49;
-    /* border: 0px solid #000000; */
-    border-radius: 14px;
-    /* box-shadow: 0px 0px 0px #000000; */
-}
-input[type=range]::-ms-thumb {
-    margin-top: 1px;
-    box-shadow: 1px 1px 0px #610A64;
-    /* border: 0px solid #010508; */
-    height: 19px;
-    width: 19px;
-    border-radius: 16px;
-    background: #610A64;
-    cursor: pointer;
-}
-input[type=range]:focus::-ms-fill-lower {
-    background: #393E49;
-}
-input[type=range]:focus::-ms-fill-upper {
-    background: #393E49;
-}
